# chatagent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/agents/researcher/: graph.py  nodes.py  prompts.py  state.py  tools.py
src/api/: main.py
src/api/routes/: cache.py  chat.py  health.py  metrics.py
src/app/agents/researcher/: agent.py  graph.py  nodes.py  state.py  tools.py
src/app/common/cache/: cache.py  hash_cache.py  semantic_cache.py
src/app/common/error_handling/: circuit_breaker.py
src/app/common/evaluation/: llm_evaluator.py  llm_judge.py
src/app/common/models/: models.py
src/app/common/rag/: rag.py
src/app/evaluation/: llm_judge.py
src/app/security/: input_sanitiser.py  output_validator.py  pii_detector.py  security_guard.py
src/app/security/pii_detector/: entity_recogniser.py  pattern_recogniser.py  pii_detector.py
src/app/shared/error_handling/: circuit_breaker.py  fallback_chain.py  with_retry.py
src/common/cache/: semantic_cache.py
src/common/cost_optimisation/: token_budget.py
src/common/models/: chat.py
src/common/observability/: metrics_collector.py
src/core/config/: constants.py  settings.py  types.py
src/core/logging/: json_formatter.py  logger.py
src/security/: output_validator.py
src/security/pii_detector/: pii_detector.py
tests/evaluation/: cases.py  test_regression.py
tests/evaluation/regression/: cases.py  test_llm_judge.py
tests/security/: test_input_sanitiser.py  test_output_validator.py  test_pii_detector.py  test_security_guard.py  test_security_guard_integration.py
tests/security/integration/: test_security_guard.py
tests/security/regression/: cases.py  test_security_guard.py
tests/security/unit/: test_input_sanitiser.py  test_output_validator.py  test_pii_detector.py  test_security_guard.py
