[project]
name = "chatagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "gliner>=0.2.27",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.10.2",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.10",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: makes real network calls to external services (slow, needs credentials)",
    "regression: replays a fixed dataset against real LLM calls to catch quality drift",
]
